--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,56 @@
   padding: 0%;
   margin: 0%;
 }
+.add-user-form {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-direction: column;
+  background-color: cadetblue;
+  width: 50vw;
+  height: 50vh;
+  margin: 15% auto;
+}
+
+.show-new-player-div {
+  z-index: 1;
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%;
+
+  background-color: rgba(0, 0, 0, 0.6);
+}
+.hide-new-player-div {
+  display: none;
+}
+.add-user-button {
+  min-width: 20%;
+}
+.close {
+  align-self: flex-end;
+  margin-right: 1em;
+  color: #aaaaaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
+.game-footer {
+  display: flex;
+  width: 50%;
+  margin: 2em auto;
+  justify-content: space-around;
+}
+.game-footer button {
+  width: 25%;
+  height: 2em;
+}
