--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,22 @@
+@import url('https://fonts.googleapis.com/css2?family=Assistant&family=Oswald&display=swap');
 * {
   box-sizing: border-box;
   padding: 0%;
   margin: 0%;
+  font-family: 'Assistant', sans-serif;
+  background: #63B0CD;
+}
+
+#game-header{
+  text-align: center;
+  margin-top: 10px;
 }
 .add-user-form {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
   flex-direction: column;
-  background-color: cadetblue;
+  background-color: #63B0CD;
   width: 50vw;
   height: 50vh;
   margin: 15% auto;
@@ -34,7 +42,7 @@
 .close {
   align-self: flex-end;
   margin-right: 1em;
-  color: #aaaaaa;
+  color: black;
   float: right;
   font-size: 28px;
   font-weight: bold;
@@ -45,14 +53,4 @@
   color: #000;
   text-decoration: none;
   cursor: pointer;
-}
-.game-footer {
-  display: flex;
-  width: 50%;
-  margin: 2em auto;
-  justify-content: space-around;
-}
-.game-footer button {
-  width: 25%;
-  height: 2em;
 }
